--- a/web/views/user/user_register.html
+++ b/web/views/user/user_register.html
@@ -20,7 +20,7 @@
     </div>
     <!--register-->
     <div class="registerArea">
-        <h3>注册新用户<span class="go">我有账号，去<a href="login.html" target="_blank">登陆</a></span></h3>
+        <h3>注册新用户<span class="go">我有账号，去<a href="/user/login" target="_blank">登陆</a></span></h3>
         <div class="info">
             <form action="/user/register" method="post" id="reg_form" class="sui-form form-horizontal">
                 <div class="control-group">
