--- a/web/views/common/footer.html
+++ b/web/views/common/footer.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/all.css"/>
-    <link rel="stylesheet" type="text/css" href="../../static/css/main.css"/>
-    <script type="text/javascript" src="../../static/js/all.js"></script>
-    <script type="text/javascript" src="../../static/js/register.js"></script>
-</head>
-<body>
+
 <!--foot-->
-<div class="py-container copyright">
+<div class="py-container copyright footer">
     <ul>
         <li>关于我们</li>
         <li>联系我们</li>
@@ -27,5 +15,3 @@
     <div class="beian">京ICP备08001421号京公网安备110108007702
     </div>
 </div>
-</body>
-</html>
