--- a/web/views/order/place_order.html
+++ b/web/views/order/place_order.html
@@ -52,7 +52,7 @@
             收） {{.Phone}}</dd>
     {{end}}
     </dl>
-    <a href="user_center_site.html" class="edit_site">编辑收货地址</a>
+    <a href="/user/myAddress" class="edit_site">编辑收货地址</a>
 
 </div>
 
