--- a/web/views/user/user_login.html
+++ b/web/views/user/user_login.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <title>品优购，欢迎登录</title>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/all.css"/>
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="../static/css/pages-login.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/css/all.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/css/pages-login.css"/>
 
-    <script type="text/javascript" src="../static/js/all.js"></script>
-    <script type="text/javascript" src="../static/js/login.js"></script>
+    <script type="text/javascript" src="../../static/js/all.js"></script>
+    <script type="text/javascript" src="../../static/js/login.js"></script>
 </head>
 
 <body>
