--- a/web/views/common/header.html
+++ b/web/views/common/header.html
@@ -8,9 +8,10 @@
                 <div class="shortcut">
                     <ul class="fl">
                         <li class="f-item">品优购欢迎您！</li>
-                        <li class="f-item">请<a href="/user/login" target="_self">登录</a>　<span>
-                                <a href="/user/register" target="_self">免费注册</a></span>
-                        </li>
+                        <li class="f-item"><a href="/user/login" target="_self">登录</a></li>
+                        <li class="f-item space"></li>
+                        <li class="f-item"><a href="/user/register" target="_self">免费注册</a></li>
+                        <li class="f-item space"></li>
                         <li class="f-item">{{.userName}}<span><a href="/user/logout" target="_self">退出登录</a></span></li>
                     </ul>
                     <ul class="fr">
