--- a/web/views/product/product_search.html
+++ b/web/views/product/product_search.html
@@ -33,10 +33,17 @@
 
 <div class="search_bar clearfix">
     <a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-    <form class="sui-form" action="/product/search" method="post">
+    <form class="sui-form" action="/product/search" method="get">
     <div class="search_con fl">
-        <input type="text" class="input_text fl" name="" placeholder="搜索商品">
-        <input type="submit" class="input_btn fr" name="" value="搜索">
+        <input type="text" class="input_text fl" name="searchText" placeholder="搜索商品">
+
+        <input type="submit" value="搜索" οnclick="totalSearch()"/>
+
+        <p></p>
+        <a><input type="checkbox" name="SearchMethod" value="Id"  />Id</a>
+        <a><input type="checkbox" name="searchMethod" value="Tag" />标签</a>
+        <a><input type="checkbox" name="searchMethod" value="Name" />名称</a>
+        <a><input type="checkbox" name="SearchMethod" value="Class"  />分类</a>
     </div>
     </form>
     <div class="guest_cart fr">
