--- a/web/views/user/user_myOrder.html
+++ b/web/views/user/user_myOrder.html
@@ -4,11 +4,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>品优购，优质！优质！-用户中心</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/main.css">
 </head>
 <body>
-<div class="right_content clearfix">
+<div class="clearfix">
     <h3 class="common_title2">全部订单</h3>
     <ul class="order_list_th w978 clearfix">
         <li class="col01">2016-8-21 17:36:24</li>
